--- a/WindowsFormsApplication/MainFrorm.resx
+++ b/WindowsFormsApplication/MainFrorm.resx
@@ -482,7 +482,7 @@
         jkkAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="button2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="button_Search.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAA/lJREFUeF7t
         m9tLVFEUxiW7Ug9ld6I/ICrsRYt68dXXynScSyOV0UMgXQiKYCBCeyqziOilqOgCvUVB9NJ/kCFhGRlJ
